--- a/index.html
+++ b/index.html
@@ -163,14 +163,26 @@
     <footer>
 
         <!-- top footer -->
-        <div>
+        <div id="top-footer">
+
+            <!-- qui ci va la scritta "location" -->
+            <div class="row row-cols-1 row-cols-sm-3">
+                <div class="col-12 col-sm-4">ciao</div>
+                <div class="col-12 col-sm-4">ciao</div>
+                <div class="col-12 col-sm-4">ciao</div>
+            </div>
 
         </div>
 
 
         <!-- bottom footer -->
-        <div>
+        <div id="bottom-footer">
 
+            <!-- qui ci va il copyright -->
+            <div class="row">
+                <div class="col-12">copyright</div>
+            </div>
+            
         </div>
 
     </footer>
