--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
+    <!-- link a fontawesome -->
+    <script src="https://kit.fontawesome.com/689deddfae.js" crossorigin="anonymous"></script>
+
     <title>Bootstrap</title>
 
 </head>
@@ -19,7 +22,7 @@
         <nav class="container container-sm container-lg">
 
             <div class="row">
-                <div class="col-6"></div>
+                <div class="col-6">START BOOTSTRAP</div>
                 <div class="col-6"></div>
             </div>
 
@@ -45,7 +48,6 @@
             </div>
 
         </div>
-
 
     </header>
 
