--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
                     <div class="col-12 d-flex flex-column align-items-center">
                         <img class="mt-3" src="img/avatar.svg" alt="">
                         <span class="mt-3 fs-1">START BOOTSTRAP</span>
-                        <span class="mt-3 fs-2">-*-</span>
+
+                        <span class="mt-3 fs-2">
+                            <hr class="d-inline-block">
+                            <i class="fa-solid fa-star"></i>
+                            <hr class="d-inline-block">
+                        </span>
+
                         <span id="competenze" class="text-center mt-3 mb-3" >GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
                     </div>
     
@@ -82,7 +88,11 @@
 
                     <div class="col-12 d-flex flex-column align-items-center mt-3">
                         <span class="fs-2" >PORTFOLIO</span>
-                        <span class="fs-3" >-*-</span>
+                        <span class="mt-3 fs-2">
+                            <hr class="d-inline-block">
+                            <i class="fa-solid fa-star"></i>
+                            <hr class="d-inline-block">
+                        </span>
                     </div>
                     
                 </div>
@@ -110,7 +120,11 @@
                 <div class="row">
                     <div class="col-12 d-flex flex-column align-items-center">
                         <span class="fs-1" >ABOUT</span>
-                        <span class="fs-2" >-*-</span>
+                        <span class="mt-3 fs-2">
+                            <hr class="d-inline-block">
+                            <i class="fa-solid fa-star"></i>
+                            <hr class="d-inline-block">
+                        </span>
                     </div>
                 </div>
 
@@ -151,7 +165,11 @@
                 <div class="row ">
                     <div class="col-12 d-flex flex-column align-items-center">
                         <span class="fs-1" >CONTACT ME</span>
-                        <span class="fs-2" >-*-</span>
+                        <span class="mt-3 fs-2">
+                            <hr class="d-inline-block">
+                            <i class="fa-solid fa-star"></i>
+                            <hr class="d-inline-block">
+                        </span>
                     </div>
                 </div>
 
