--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- topbar header -->
         <div id="topbar-header">
 
-            <nav class="navbar navbar-expand-lg">
+            <nav id="bg-navbar" class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid">
                     <a class="navbar-brand text-white" href="#">START BOOTSTRAP</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
