--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon text-white"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">PORTFOLIO</a>
+                                <a class="nav-link text-white" href="#portfolio">PORTFOLIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">ABOUT</a>
+                                <a class="nav-link text-white" href="#about">ABOUT</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">CONTACT</a>
+                                <a class="nav-link text-white" href="#contact-me">CONTACT</a>
                             </li>
                         </ul>
                     </div>
